// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`custom filename 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

pre-start = "npm install"
"
`;

exports[`defaults 1`] = `
{
  ".config/wt.toml": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

",
  ".gitattributes": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

* text=auto eol=lf",
  ".gitignore": "# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".
node_modules/
!/.gitattributes
!/.projen/tasks.json
!/.projen/deps.json
!/.projen/files.json
!/.config/wt.toml
",
  ".projen/files.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "files": [
      ".config/wt.toml",
      ".gitattributes",
      ".gitignore",
      ".projen/deps.json",
      ".projen/files.json",
      ".projen/tasks.json",
    ],
  },
  ".projen/tasks.json": {
    "//": "~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".",
    "tasks": {
      "build": {
        "description": "Full release build",
        "name": "build",
        "steps": [
          {
            "spawn": "default",
          },
          {
            "spawn": "pre-compile",
          },
          {
            "spawn": "compile",
          },
          {
            "spawn": "post-compile",
          },
          {
            "spawn": "test",
          },
          {
            "spawn": "package",
          },
        ],
      },
      "compile": {
        "description": "Only compile",
        "name": "compile",
      },
      "default": {
        "description": "Synthesize project files",
        "name": "default",
      },
      "eject": {
        "description": "Remove projen from the project",
        "env": {
          "PROJEN_EJECTING": "true",
        },
        "name": "eject",
        "steps": [
          {
            "spawn": "default",
          },
        ],
      },
      "package": {
        "description": "Creates the distribution package",
        "name": "package",
      },
      "post-compile": {
        "description": "Runs after successful compilation",
        "name": "post-compile",
      },
      "pre-compile": {
        "description": "Prepare the project for compilation",
        "name": "pre-compile",
      },
      "test": {
        "description": "Run tests",
        "name": "test",
      },
    },
  },
}
`;

exports[`every section 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

pre-start = "pnpm install --frozen-lockfile"

[post-start]
copy = "wt step copy-ignored"
server = "wt step tether -- pnpm dev --port {{ branch | hash_port }}"

[pre-merge]
lint = "pnpm lint"
test = "pnpm vitest run"

[aliases]
open = 'open "http://localhost:{{ branch | hash_port }}"'

  [[aliases.check]]
  lint = "pnpm lint"

  [[aliases.check]]
  test = "pnpm vitest run"

[commit.generation]
template-append = "Write imperative subjects."

[forge]
platform = "github"
hostname = "github.example.com"

[list]
url = "http://localhost:{{ branch | hash_port }}"

[step.copy-ignored]
exclude = [ ".turbo/", "node_modules/.cache/" ]
"
`;

exports[`hook forms > a single command 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

pre-start = "npm install"
"
`;

exports[`hook forms > an ordered pipeline 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

[[post-start]]
install = "npm ci"

[[post-start]]
build = "npm run build"
server = "npm run dev"
"
`;

exports[`hook forms > named commands 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

[post-start]
server = "npm run dev"
watch = "npm run watch"
"
`;

exports[`reaches unmodelled keys through the file 1`] = `
"# ~~ Generated by projen. To modify, edit .projenrc.js and run "npx projen".

pre-start = "npm install"

[list]
url = "http://localhost:3000"
"
`;
